--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@ body {
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  overflow-x: hidden;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden !important;
 }
 
 code {
@@ -18,6 +18,5 @@ html {
   scroll-behavior: smooth;
   box-sizing: border-box;
   font-size: 62.5%; /* 1rem = 10px */
-  overflow-x: hidden;
-  overflow-x: hidden;
+  overflow: hidden !important;
 }
